--- a/data/feats/skill-01-DMetdzt1VJL2Y62i.htm
+++ b/data/feats/skill-01-DMetdzt1VJL2Y62i.htm
@@ -1,14 +1,11 @@
 Name: Snare Crafting
 Nom: Fabrication de pièges artisanaux
 PrereqEN: trained in Crafting
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: Fabriquer des pièges
+PrereqFR: qualifié en Artisanat
+État: officielle
 
 ------ Description (en) ------
 <p>You can use the Craft activity to create snares. When you select this feat, you add the formulas for four common snares to your formula book.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> qualifié en Artisanat</p>
-<hr>
 <p>Vous pouvez utiliser l’activité Artisanat pour créer des pièges, en utilisant les règles de la page 242. Quand vous sélectionnez ce don, vous ajoutez immédiatement les formules de quatre pièges ordinaires à votre formulaire.</p>
