--- a/data/feats/skill-01-Dvz54d6aPhjsmUux.htm
+++ b/data/feats/skill-01-Dvz54d6aPhjsmUux.htm
@@ -1,14 +1,11 @@
 Name: Lie To Me
 Nom: Détecteur de mensonges
 PrereqEN: trained in Deception
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: Utiliser la Duperie pour détecter les mensonges
+PrereqFR: qualifié en Duperie
+État: officielle
 
 ------ Description (en) ------
 <p>You can use Deception to weave traps to trip up anyone trying to deceive you. If you can engage in conversation with someone trying to Lie to you, use your Deception DC if it is higher than your Perception DC to determine whether they succeed. This doesn't apply if you don't have a back-and-forth dialogue, such as when someone attempts to Lie during a long speech.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> qualifié en Duperie</p>
-<hr>
 <p>Vous pouvez utiliser Duperie pour tendre un piège à quiconque essaie de vous duper. Si vous pouvez engager la conversation avec quelqu’un essayant de vous Mentir, utilisez votre DD de Duperie s’il est supérieur à votre DD de Perception pour déterminer s’il réussit. Cela ne s’applique pas si vous ne dialoguez pas, par exemple quand quelqu’un tente de Mentir pendant un long discours.</p>
