--- a/data/feats/skill-01-FmfVehPphZWyrgX1.htm
+++ b/data/feats/skill-01-FmfVehPphZWyrgX1.htm
@@ -1,7 +1,7 @@
 Name: Virtuosic Performer (Singing)
 Nom: Artiste virtuose (Chant)
 PrereqEN: trained in Performance
-Avantage:
+Avantage: +1 avec un certain type de représentation
 PrereqFR: qualifié en Représentation
 État: officielle
 
