--- a/data/feats/skill-01-dTjzxCy9pku5gL0F.htm
+++ b/data/feats/skill-01-dTjzxCy9pku5gL0F.htm
@@ -1,8 +1,8 @@
 Name: Specialty Crafting (Weaving)
 Nom: Artisanat spécialisé (Tissage)
 PrereqEN: trained in Crafting
-Avantage:
-PrereqFR: 
+Avantage: Gagner des bonus pour Fabriquer certains objets
+PrereqFR: qualifié en Artisanat
 État: officielle
 
 ------ Description (en) ------
