--- a/data/feats/skill-01-f0faBEUPtspdutKx.htm
+++ b/data/feats/skill-01-f0faBEUPtspdutKx.htm
@@ -1,16 +1,13 @@
 Name: Acrobatic Performer
 Nom: Représentation acrobatique
 PrereqEN: trained in Acrobatics
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: libre
+Avantage: Utiliser Acrobaties à la place de Représentation
+PrereqFR: qualifié en Acrobaties
+État: libre
 
 ------ Description (en) ------
 <p>You're an incredible acrobat, evoking wonder and enrapturing audiences with your prowess. It's almost a performance!</p>
 <p>You can roll an Acrobatics check instead of a Performance check when using the @Compendium[pf2e.actionspf2e.EEDElIyin4z60PXx]{Perform} action.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis </strong>qualifié en Acrobaties</p>
-<hr>
 <p>Vous êtes un acrobate incroyable, une merveille d'évocation et vous êtes capable de capter l'attention du public avec vos prouesses. C'est une véritable représentation !</p>
 <p>Vous pouvez utiliser un test d'Acrobaties au lieu d'un test de Représentation lorsque vous utilisez l'action @Compendium[pf2e.actionspf2e.EEDElIyin4z60PXx]{Représentation}.</p>
