--- a/data/feats/class-06-2HoDwBAmPIAoKUVF.htm
+++ b/data/feats/class-06-2HoDwBAmPIAoKUVF.htm
@@ -1,7 +1,7 @@
 Name: Dazing Blow
 Nom: Coup étourdissant
 PrereqEN: 
-Avantage:
+Avantage: Vous rouez de coups un adversaire tenu, en espérant l'assommer.
 PrereqFR: 
 État: changé
 État d'origine: libre
@@ -22,6 +22,6 @@ PrereqFR:
 <p>Faites une @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappe} de mêlée contre une crature que vous empoignez. Les dégâts de l'armee de cette Frappe sont des dégâts contondants. Si la frappe touche, la créature doit effectuer un jet de Vigueur contre votre DD de classe ; c'est un effet de mise hors combat.</p>
 <hr />
 <p><strong>Succès critique</strong> La créature n'est pas affectée.</p>
-<p><strong>Succès</strong> La créature est @Compendium[pf2e.conditionspf2e.dfCMdR4wnpbYNTix]{étourdie} 1.</p>
+<p><strong>Succès</strong> La créature est @Compendium[pf2e.conditionspf2e.dfCMdR4wnpbYNTix]{Etourdie} 1.</p>
 <p><strong>Échec</strong> La créature est étourdie 2.</p>
 <p><strong>Échec critique</strong> La créature est étourdie 3.</p>
