--- a/data/feats/class-06-5Jc2ySGLVi053qpz.htm
+++ b/data/feats/class-06-5Jc2ySGLVi053qpz.htm
@@ -1,7 +1,7 @@
 Name: Twist the Knife
 Nom: Remuer le couteau
 PrereqEN: 
-Avantage:
+Avantage: Vous avez trouvé le point faible de votre adversaire. Vous infligez des dégâts de saignement.
 PrereqFR: 
 État: changé
 État d'origine: officielle
