--- a/data/feats/class-06-6J2ZSGNsXPKPcJGV.htm
+++ b/data/feats/class-06-6J2ZSGNsXPKPcJGV.htm
@@ -1,7 +1,7 @@
 Name: Tiger Slash
 Nom: Taillade du tigre
 PrereqEN: Tiger Stance
-Avantage:
+Avantage: Vous lacérez violemment votre adversaire.
 PrereqFR: Posture du tigre
 État: changé
 État d'origine: officielle
@@ -13,4 +13,4 @@ PrereqFR: Posture du tigre
 ------ Description (fr) ------
 <p><strong>Conditions</strong> Vous êtes dans la Posture du tigre</p>
 <hr />
-<p>Vous lacérez violemment avec vos deux mains. Faites une Frappe de griffe de tigre. Elle inflige deux dés de dégâts d’arme supplémentaires (trois si vous êtes de niveau 14 ou plus) et vous pouvez repousser la cible de 1,50 m comme si vous aviez réussi à la Pousser. Si l’attaque est un succès critique et inflige des dégâts, ajoutez votre modificateur de Force aux dégâts de saignement persistants de votre griffe de tigre.</p>
+<p>Vous lacérez violemment avec vos deux mains. Faites une Frappe de griffe de tigre. Elle inflige deux dés de dégâts d’arme supplémentaires (trois si vous êtes de niveau 14 ou plus) et vous pouvez repousser la cible de 1,50 mètres comme si vous aviez réussi à la Pousser. Si l’attaque est un succès critique et inflige des dégâts, ajoutez votre modificateur de Force aux dégâts de saignement persistants de votre griffe de tigre.</p>
