--- a/data/feats/class-06-7fU6e3HIT4NvwLYa.htm
+++ b/data/feats/class-06-7fU6e3HIT4NvwLYa.htm
@@ -1,7 +1,7 @@
 Name: Halcyon Speaker Dedication
 Nom: Dévouement de l'Orateur paisible
 PrereqEN: Magaambyan Attendant Dedication|member of the Magaambya of conversant rank
-Avantage:
+Avantage: Vous obtenez l'accès aux sorts de magie paisible.
 PrereqFR: Dévouement du Gardien de Magaambya|membre de l'Académie de Magaambya avec un rang de connaisseur
 État: changé
 État d'origine: libre
