--- a/data/feats/class-06-ajesR7y0jWzqjAgc.htm
+++ b/data/feats/class-06-ajesR7y0jWzqjAgc.htm
@@ -1,7 +1,7 @@
 Name: Current Spell
 Nom: Sort à contre courant
 PrereqEN: 
-Avantage:
+Avantage: Vous utilisez la magie pour manipuler l'air ou l'eau afin de vous protéger
 PrereqFR: 
 État: changé
 État d'origine: libre
@@ -14,5 +14,5 @@ PrereqFR:
 <p>@Compendium[pf2e.feat-effects.DhvSMIFs6xifgQHX]{Effect: Current Spell (Water)}</p>
 ------ Description (fr) ------
 <p>Lorsque vous utilisez la magie pour manipuler l'air ou l'eau, vous détournez une partie de ses courants pour former une barrière autour de vous.</p>
-<p>Si votre prochaine action consiste à @Compendium[pf2e.actionspf2e.aBQ8ajvEBByv45yz]{Lancer un sort} avec le trait air ou eau, jusqu'au début de votre prochain tour, vous obtenez un bonus de circonstances de +1 à la CA ou un bonus de circonstances de +2 à la CA contre les attaques à distance. cet effet a le trait air ou eau, ou les deux, en fonction des traits du sort que vous lancez.</p>
-<p>Vous obtenez aussi un bonus de circonstances de +1 à tous les jets de sauvegarde contre les effets avec le trait air, le trait eau our les deux jusqu'au début de votre prochain tour, en fonction des traits du sort.</p>
+<p>Si votre prochaine action consiste à @Compendium[pf2e.actionspf2e.aBQ8ajvEBByv45yz]{Lancer un sort} avec le trait air ou eau, jusqu'au début de votre prochain tour, vous obtenez un bonus de circonstances de +1 à la CA ou un bonus de circonstances de +2 à la CA contre les attaques à distance. Cet effet a le trait air ou eau, ou les deux, en fonction des traits du sort que vous lancez.</p>
+<p>Vous obtenez aussi un bonus de circonstances de +1 à tous les jets de sauvegarde contre les effets avec le trait air, le trait eau ou les deux jusqu'au début de votre prochain tour, en fonction des traits du sort.</p>
