--- a/data/feats/class-06-dHUoQVzDa9Cf4QCG.htm
+++ b/data/feats/class-06-dHUoQVzDa9Cf4QCG.htm
@@ -1,7 +1,7 @@
 Name: Reflexive Shield
 Nom: Bouclier instinctif
 PrereqEN: 
-Avantage:
+Avantage: Vous utilisez votre bouclier pour encaisser le gros des effets de zone et de leurs dégâts.
 PrereqFR: 
 État: changé
 État d'origine: officielle
@@ -11,4 +11,4 @@ PrereqFR:
 <p>When you @Compendium[pf2e.actionspf2e.xjGwis0uaC2305pm]{Raise your Shield}, you gain your shield's circumstance bonus to Reflex saves. If you have the @Compendium[pf2e.feats-srd.jM72TjJ965jocBV8]{Shield Block} reaction, damage you take as a result of a Reflex save can trigger that reaction, even if the damage isn't physical damage.</p>
 <p>@Compendium[pf2e.feat-effects.pwbFFD6NzDooobKo]{Effect: Reflexive Shield}</p>
 ------ Description (fr) ------
-<p>Vous utilisez votre bouclier pour encaisser le gros des effets de zone et de leurs dégâts. Quand vous Levez votre bouclier, vous bénéficiez de son bonus de circonstances sur vos jets de Réflexes. Si vous avez la réaction Blocage au bouclier, les dégâts que vous subissez suite à un jet de Réflexes peuvent déclencher cette réaction, même si ces dégâts ne sont pas physiques.</p>
+<p>Vous utilisez votre bouclier pour encaisser le gros des effets de zone et de leurs dégâts. Quand vous Levez votre bouclier, vous bénéficiez de son bonus de circonstances sur vos jets de Réflexes. Si vous avez la réaction @Compendium[pf2e.bestiary-ability-glossary-srd.m4HQ2o5aPxjXf2kY]{Blocage au bouclier}, les dégâts que vous subissez suite à un jet de Réflexes peuvent déclencher cette réaction, même si ces dégâts ne sont pas physiques.</p>
