--- a/data/feats/class-06-F1DVDJRARfdb1Kjz.htm
+++ b/data/feats/class-06-F1DVDJRARfdb1Kjz.htm
@@ -1,7 +1,7 @@
 Name: Storm Retribution
 Nom: Châtiment de la tempête
 PrereqEN: storm order|tempest surge order spell
-Avantage:
+Avantage: Vous vous défendez en déclenchant une explosion de fureur orageuse sur une créature qui vous a blessé.
 PrereqFR: ordre de la tempête|sort d’ordre onde de tempête
 État: changé
 État d'origine: officielle
@@ -16,4 +16,4 @@ PrereqFR: ordre de la tempête|sort d’ordre onde de tempête
 <p><strong>Déclencheur</strong> Un adversaire adjacent vous inflige un coup critique avec une arme de corps à corps ou une attaque à mains nues au corps à corps.</p>
 <p><strong>Conditions</strong> Votre réserve contient au moins 1 point de focalisation</p>
 <hr />
-<p>Vous vous défendez en déclenchant une explosion de fureur orageuse sur une créature qui vous a blessé. Vous lancez onde de tempête sur l’adversaire déclencheur et le repoussez de 1,5 m s’il rate son jet de Réflexes ou de 3 m s’il obtient un échec critique. Ceci est un déplacement forcé.</p>
+<p>Vous vous défendez en déclenchant une explosion de fureur orageuse sur une créature qui vous a blessé. Vous lancez @Compendium[pf2e.spells-srd.ho1jSoYKrHUNnM90]{Onde de tempête} sur l’adversaire déclencheur et vous le repoussez de 1,5 mètres s’il rate son jet de Réflexes ou de 3 mètres s’il obtient un échec critique. Ceci est un déplacement forcé.</p>
