--- a/data/feats/class-06-hkdP5tsTAoqJDR8v.htm
+++ b/data/feats/class-06-hkdP5tsTAoqJDR8v.htm
@@ -1,7 +1,7 @@
 Name: Triple Shot
 Nom: Triple tir
 PrereqEN: Double Shot
-Avantage:
+Avantage: Votre maîtrise de votre arme vous permet d'effectuer plusieurs tirs très rapidement.
 PrereqFR: Double tir
 État: changé
 État d'origine: officielle
@@ -10,4 +10,4 @@ PrereqFR: Double tir
 <p>You can quickly fire multiple shots with greater control.</p>
 <p>When you use @Compendium[pf2e.feats-srd.PwcmmJOLY8C9JHau]{Double Shot}, you can make the attacks against the same target. You can add an additional action to Double Shot to make three ranged Strikes instead of two. If you do, the penalty is -4. All attacks count toward your multiple attack penalty, but the penalty doesn't increase until after you've made all of them.</p>
 ------ Description (fr) ------
-<p>Vous avez amélioré la maîtrise de votre arme, ce qui vous permet d’effectuer plusieurs tirs très rapidement. Quand vous utilisez Double tir, vous pouvez effectuer les attaques contre la même cible. Vous pouvez ajouter une action au Double tir afin de faire trois Frappes à distance au lieu de deux. Le cas échéant, le malus s’élève à −4. Toutes les attaques comptent dans le calcul de votre malus d’attaques multiples mais le malus n’augmente qu’après les avoir toutes effectuées.</p>
+<p>Vous avez amélioré la maîtrise de votre arme, ce qui vous permet d’effectuer plusieurs tirs très rapidement. Quand vous utilisez @Compendium[pf2e.feats-srd.PwcmmJOLY8C9JHau]{Double tir}, vous pouvez effectuer les attaques contre la même cible. Vous pouvez ajouter une action au Double tir afin de faire trois Frappes à distance au lieu de deux. Le cas échéant, le malus s’élève à −4. Toutes les attaques comptent dans le calcul de votre malus d’attaques multiples mais le malus n’augmente qu’après les avoir toutes effectuées.</p>
