--- a/data/feats/class-06-JHcvySfCM9uYNb9N.htm
+++ b/data/feats/class-06-JHcvySfCM9uYNb9N.htm
@@ -1,7 +1,7 @@
 Name: Revealing Stab
 Nom: Perforation révélatrice
 PrereqEN: 
-Avantage:
+Avantage: Vous révélez la position d'un ennemi caché grâce à votre attaque avec une arme perforante.
 PrereqFR: 
 État: changé
 État d'origine: officielle
