--- a/data/feats/class-06-lGCFVYjL9Lp5m9Ex.htm
+++ b/data/feats/class-06-lGCFVYjL9Lp5m9Ex.htm
@@ -1,7 +1,7 @@
 Name: Cast Down
 Nom: Incantation renversante
 PrereqEN: harmful font or healing font
-Avantage:
+Avantage: La force brute de votre foi peut forcer un adversaire à terre.
 PrereqFR: source de mise à mal ou de guérison
 État: changé
 État d'origine: officielle
@@ -10,4 +10,4 @@ PrereqFR: source de mise à mal ou de guérison
 <p>The sheer force of your faith can bring a foe crashing down.</p>
 <p>If the next action you use is to cast @Compendium[pf2e.spells-srd.wdA52JJnsuQWeyqz]{Harm} or @Compendium[pf2e.spells-srd.rfZpqmj0AIIdkVIs]{Heal} to damage one creature, the target is knocked prone if it takes any damage from the spell. If the target critically fails its save against the spell, it also takes a -10-foot status penalty to its Speed for 1 minute.</p>
 ------ Description (fr) ------
-<p>La force brute de votre foi peut forcer un adversaire à tomber. Si votre prochaine action consiste à lancer mise à mal ou guérison pour blesser une créature, celle-ci est à terre si elle subit des dégâts du sort. Si la cible obtient un échec critique à son jet de sauvegarde contre le sort, elle subit également un malus de statut de −3 m à sa Vitesse pendant 1 min.</p>
+<p>La force brute de votre foi peut forcer un adversaire à tomber. Si votre prochaine action consiste à lancer @Compendium[pf2e.spells-srd.wdA52JJnsuQWeyqz]{Mise à mal} ou @Compendium[pf2e.spells-srd.rfZpqmj0AIIdkVIs]{Guérison} pour blesser une créature, celle-ci est à terre si elle subit des dégâts du sort. Si la cible obtient un échec critique à son jet de sauvegarde contre le sort, elle subit également un malus de statut de −3 mètres à sa Vitesse pendant 1 minute.</p>
