--- a/data/feats/class-06-NMWXHGWUcZGoLDKb.htm
+++ b/data/feats/class-06-NMWXHGWUcZGoLDKb.htm
@@ -1,7 +1,7 @@
 Name: Attack of Opportunity
 Nom: Attaque d'Opportunité
 PrereqEN: 
-Avantage:
+Avantage: Vous frappez un adversaire qui vous laisse une ouverture.
 PrereqFR: 
 État: changé
 État d'origine: libre
