--- a/data/feats/class-06-S14S52HjszTgIy4l.htm
+++ b/data/feats/class-06-S14S52HjszTgIy4l.htm
@@ -1,7 +1,7 @@
 Name: Crane Flutter
 Nom: Battement d'aile de la grue
 PrereqEN: Crane Stance
-Avantage:
+Avantage: Vos bras vous protègent et attaquent grâce à la posture de la Grue.
 PrereqFR: Posture de la grue
 État: changé
 État d'origine: officielle
