--- a/data/feats/class-06-SHpVHkPxtQggD9Cf.htm
+++ b/data/feats/class-06-SHpVHkPxtQggD9Cf.htm
@@ -1,7 +1,7 @@
 Name: Swordmaster Dedication
 Nom: Dévouement de Maître des épées
 PrereqEN: Strength, Dexterity, or Constitution 14|member of the Pathfinder Society affiliated with the School of Swords
-Avantage:
+Avantage: Votre entrainement aux épées vous ont appris à ne pas relâcher votre prise sur votre arme.
 PrereqFR: Force, Dextérité ou Constitution 14|membre de la Société des Éclaireurs affilié à l'École des Épées
 État: changé
 État d'origine: libre
