--- a/data/feats/class-06-T5xFirAE8VLL5Lbu.htm
+++ b/data/feats/class-06-T5xFirAE8VLL5Lbu.htm
@@ -1,7 +1,7 @@
 Name: Smite Good
 Nom: Châtiment du bien
 PrereqEN: divine ally (blade)|tenets of evil
-Avantage:
+Avantage: Votre Lame alliée partage votre goût du sang des créatures du bien.
 PrereqFR: Allié divin (lame)|préceptes du mal
 État: changé
 État d'origine: libre
@@ -13,4 +13,4 @@ PrereqFR: Allié divin (lame)|préceptes du mal
 <p>@Compendium[pf2e.feat-effects.2MIn8qyPTmz4ZyO1]{Effect: Smite Good}</p>
 ------ Description (fr) ------
 <p>Votre allié lame partage votre goût du sang des créatures du bien. Choisissez un ennemi que vous pouvez voir. Jusqu'au début de votre prochain tour, vos @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappes} contre cet adversaire en utilisant l'arme que votre allié lame habite infligent [[/r 4 #mal]] dégâts maléfiques supplémentaires, passant à [[/r 6 #mal]] si vous êtes maître avec cet arme.</p>
-<p>Si l'ennemi choisi  vous attaque avant le début de votre prochain tour, la durée s'étend jusqu'à la fin du prochain tour de cet ennem. Si l'ennemi continue à vous attaquer à chaque tour, la durée continue à s'accroître.</p>
+<p>Si l'ennemi choisi  vous attaque avant le début de votre prochain tour, la durée s'étend jusqu'à la fin du prochain tour de cet ennemi. Si l'ennemi continue à vous attaquer à chaque tour, la durée continue à s'accroître.</p>
