--- a/data/feats/class-06-tRHjUCl0xqG97nok.htm
+++ b/data/feats/class-06-tRHjUCl0xqG97nok.htm
@@ -1,7 +1,7 @@
 Name: Ricochet Stance (Fighter)
 Nom: Posture du ricochet (Guerrier)
 PrereqEN: 
-Avantage:
+Avantage: Vous adoptez une posture conçue pour faire rebondir vers vous les armes que vous avez lancées.
 PrereqFR: 
 État: changé
 État d'origine: libre
