--- a/data/feats/skill-01-f3JBnLJNOkt6BFkg.htm
+++ b/data/feats/skill-01-f3JBnLJNOkt6BFkg.htm
@@ -1,7 +1,7 @@
 Name: Terrain Expertise (Desert)
 Nom: Expertise du terrain (Désert)
 PrereqEN: trained in Survival
-+1 aux tests de Survie sur certains terrains
+Avantage: +1 aux tests de Survie sur certains terrains
 PrereqFR: qualifié en Survie
 État: officielle
 
