--- a/data/pathfinder-bestiary/ePa0KmNPpR4zUPfX.htm
+++ b/data/pathfinder-bestiary/ePa0KmNPpR4zUPfX.htm
@@ -6,4 +6,4 @@ Nom: Magister dero
 ------ Description (en) ------
 Dero magisters are leaders among dero society. They perform the bulk of the cruel operations and memory-altering procedures inflicted upon their victims.<br /><br />
 ------ Description (fr) ------
-Les magisters sont les dirigeants au sein de la société dero. Ils s’occupent de la majeure partie des opérations cruelles et des procédures altérant la mémoire infligées à leurs victimes.<br><br>
+Les magisters sont les dirigeants au sein de la société Dero. Ils s’occupent de la majeure partie des opérations cruelles et des procédures altérant la mémoire infligées à leurs victimes.<br><br>
