--- a/data/pathfinder-bestiary/GssFAdolUA3ghg2e.htm
+++ b/data/pathfinder-bestiary/GssFAdolUA3ghg2e.htm
@@ -6,4 +6,4 @@ Nom: Megaprimatus
 ------ Description (en) ------
 The megaprimatus is among the mightiest of apes, quick to confront any perceived intrusions into its domain. With a height of 40 feet, it towers over even most giants, and is used to being the top-tier predator in the region.<br /><br />
 ------ Description (fr) ------
-Le megaprimatus compte parmi les primates les plus puissants et n’hésite pas à répondre à la moindre intrusion dans son domaine. Avec une taille de 12 m, il est plus grand que la plupart des géants et il est généralement le plus grand prédateur de sa région.<br><br>
+Le megaprimatus compte parmi les primates les plus puissants et n’hésite pas à répondre à la moindre intrusion dans son domaine. Avec une taille de 12 mètres, il est plus grand que la plupart des géants et il est généralement le plus grand prédateur de sa région.<br><br>
