--- a/data/pathfinder-bestiary/wifELOkkRO2634bc.htm
+++ b/data/pathfinder-bestiary/wifELOkkRO2634bc.htm
@@ -6,4 +6,4 @@ Nom: Éclaireur bourbiérin
 ------ Description (en) ------
 Often tasked with patrolling the borders of their lands, boggard scouts learn to speak another language (typically Common) to make it easier to issue threats and insults toward trespassers.<br /><br />
 ------ Description (fr) ------
-Souvent affecté à la surveillance des frontières de leur domaine, les éclaireurs bourbiérins apprennent à parler une autre langu(généralement le commun) pour qu’ils puissent plus facilement évaluer les menaces et insulter les intrus.<br><br>
+Souvent affecté à la surveillance des frontières de leur domaine, les éclaireurs bourbiérins apprennent à parler une autre langue(généralement le commun) pour qu’ils puissent plus facilement évaluer les menaces et insulter les intrus.<br><br>
