--- a/data/pathfinder-bestiary/ZsduIlmluQe4ZxFy.htm
+++ b/data/pathfinder-bestiary/ZsduIlmluQe4ZxFy.htm
@@ -6,4 +6,4 @@ Nom: Étrangleur dero
 ------ Description (en) ------
 Dero stranglers specialize in capturing living victims, and they are often called upon to aid in abductions.<br /><br />
 ------ Description (fr) ------
-Les étrangleurs deros sont spécialisés dans la capture de victimes vivantes et ont demande souvent leur aide pour les enlèvements.<br><br>
+Les étrangleurs deros sont spécialisés dans la capture de victimes vivantes et on demande souvent leur aide pour les enlèvements.<br><br>
