--- a/data/pathfinder-bestiary-2/3VFHZyjSjNA1jbiO.htm
+++ b/data/pathfinder-bestiary-2/3VFHZyjSjNA1jbiO.htm
@@ -5,4 +5,4 @@ Nom: Nuée de sportlebores
 ------ Description (en) ------
 A swarm of sportlebores is a much more dangerous foe than a single insect.<br /><br />
 ------ Description (fr) ------
-Une nuée de sportlebores est un ennemi bien plus dangereux qu'un unique insecte.<br /><br />
+Une nuée de Sportlebores est un ennemi bien plus dangereux qu'un unique insecte.<br /><br />
