--- a/data/pathfinder-bestiary-2/B4TJHP0yX8SXHQ4x.htm
+++ b/data/pathfinder-bestiary-2/B4TJHP0yX8SXHQ4x.htm
@@ -1,8 +1,8 @@
 Name: Trumpet Archon
-Nom: Archange messager
+Nom: Archange Messager
 État: libre
 
 ------ Description (en) ------
 Trumpet archons are messengers, emissaries, and storytellers-embodiments of the virtue of kindness. They use stories and allegories to prevent bloodshed, and among all archons they are the most likely to work together with angels, perhaps leading to the similarities in their forms. When diplomacy is impossible, trumpet archons rally the righteous to battle-one reassuring glance from a trumpet archon is often all it takes to instill a shaken ally with resounding courage once again.<br /><br />
 ------ Description (fr) ------
-Les archanges messagers sont des messagers, des émissaires et des conteurs - incarnations de la vertu de la bonté. Ils utilisent des histoires et des allégories pour empêcher les effusions de sang et, parmi tous les archanges, ils sont les plus susceptibles de travailler avec des anges, ce qui peut avoir conduit à des similitudes dans leurs formes. Lorsque la diplomatie est impossible, les archanges messagers rallient les justes au combat - un regard rassurant d'un archange messager suffit souvent à redonner à un allié ébranlé un courage inébranlable.<br /><br />
+Les Archanges Messagers sont des Messagers, des émissaires et des conteurs - incarnations de la vertu de la bonté. Ils utilisent des histoires et des allégories pour empêcher les effusions de sang et, parmi tous les Archanges, ils sont les plus susceptibles de travailler avec des anges, ce qui peut avoir conduit à des similitudes dans leurs formes. Lorsque la diplomatie est impossible, les Archanges Messagers rallient les justes au combat - un regard rassurant d'un Archange Messager suffit souvent à redonner à un allié ébranlé un courage inébranlable.<br /><br />
