--- a/data/pathfinder-bestiary-2/c4uQKZaRWv9n9IHo.htm
+++ b/data/pathfinder-bestiary-2/c4uQKZaRWv9n9IHo.htm
@@ -1,8 +1,8 @@
 Name: Solar
-Nom: Ange solar
+Nom: Ange Solar
 État: libre
 
 ------ Description (en) ------
 
 ------ Description (fr) ------
-Les solars sont parmi les plus grands de tous les anges, se plaçant juste en dessous des seigneurs Empyréens. Nombre de solars servent à la droite d'une divinité ou du champion d'une cause qui profite au monde entier. La plupart des archanges ressemblent à des humanoïdes, mais pas tous — ils peuvent à l'occasion adopter des formes plus inhabituelles. Un solar typique mesure environ 2,7 mètres de haut et pèse environ 250 kilos, avec une voix de commandement qu'il est impossible d'ignorer. La plupart ont une peau argentée ou dorée.<br /><br />Les solars sont des pisteurs légendaires; il est dit que les plus doués d'entre eux sont capables de suivre la trace du passage d'un fiélon infernal datant de plusieurs siècles volant à travers le Plan Astral.
+Les Solars sont parmi les plus grands de tous les anges, se plaçant juste en dessous des seigneurs Empyréens. Nombre de Solars servent à la droite d'une divinité ou du champion d'une cause qui profite au monde entier. La plupart des archanges ressemblent à des humanoïdes, mais pas tous — ils peuvent à l'occasion adopter des formes plus inhabituelles. Un Solar typique mesure environ 2,7 mètres de haut et pèse environ 250 kilos, avec une voix de commandement qu'il est impossible d'ignorer. La plupart ont une peau argentée ou dorée.<br /><br />Les Solars sont des pisteurs légendaires; il est dit que les plus doués d'entre eux sont capables de suivre la trace du passage d'un fiélon infernal datant de plusieurs siècles volant à travers le Plan Astral.
