--- a/data/pathfinder-bestiary-2/e0PXAtnDnJo4ggFX.htm
+++ b/data/pathfinder-bestiary-2/e0PXAtnDnJo4ggFX.htm
@@ -5,4 +5,4 @@ Nom: Vrykolakas vénérable
 ------ Description (en) ------
 Vrykolakas ancients are the sinister overlords of their kind, stealing blood, breath, and life to feed their immortal hunger.<br /><br />
 ------ Description (fr) ------
-Les vrykolakas vénérables sont les sinistres seigneurs de leur espèce, volant le sang, le souffle et la vie pour nourrir leur faim immortelle.<br /><br />
+Les Vrykolakas vénérables sont les sinistres seigneurs de leur espèce, volant le sang, le souffle et la vie pour nourrir leur faim immortelle.<br /><br />
