--- a/data/pathfinder-bestiary-2/hvKRgNiQtQJhHk9u.htm
+++ b/data/pathfinder-bestiary-2/hvKRgNiQtQJhHk9u.htm
@@ -1,8 +1,8 @@
 Name: Imentesh
-Nom: 
-État: auto-trad
+Nom: Imentesh
+État: libre
 
 ------ Description (en) ------
 The loquacious proteans known as imenteshes serve as missionaries, spies, and heralds of chaos to further the protean goal of reality's dissolution. Imenteshes are cunning, curiously diplomatic, and profoundly whimsical. They travel beyond the Maelstrom for their work, frequently adopting extravagant personal attire and decorations that often border upon the garish, all to curry favor with less chaotic beings.<br /><br />
 ------ Description (fr) ------
-Les protéiformes loquaces connus sous le nom d'imenteshes servent de missionnaires, d'espions et de hérauts du chaos pour faire avancer l'objectif protéiforme de dissolution de la réalité. Les imenteshes sont rusés, curieusement diplomates et profondément fantaisistes. Ils voyagent au-delà du Maelström pour leur travail, adoptant fréquemment des tenues personnelles extravagantes et des décorations à la limite du criard, tout cela pour s'attirer les faveurs d'êtres moins chaotiques.<br /><br />
+Les protéiformes loquaces connus sous le nom d'Imenteshs servent de missionnaires, d'espions et de hérauts du chaos pour faire avancer l'objectif protéiforme de dissolution de la réalité. Les Imenteshs sont rusés, curieusement diplomates et profondément fantaisistes. Ils voyagent au-delà du Maelström pour leur travail, adoptant fréquemment des tenues personnelles extravagantes et des décorations à la limite du criard, tout cela pour s'attirer les faveurs d'êtres moins chaotiques.<br /><br />
