--- a/data/pathfinder-bestiary-2/jpjhbGvaduK4iqwq.htm
+++ b/data/pathfinder-bestiary-2/jpjhbGvaduK4iqwq.htm
@@ -1,8 +1,8 @@
 Name: Spark Bat
-Nom: 
-État: auto-trad
+Nom: Chauves-souris Étincelle
+État: libre
 
 ------ Description (en) ------
 Spark bats congregate around volatile weather in the Plane of Air.<br /><br />
 ------ Description (fr) ------
-Les chauves-souris se rassemblent autour des phénomènes météorologiques volatils dans le Plan de l'air ;
+Les Chauves-souris se rassemblent autour des phénomènes météorologiques volatils dans le Plan de l'air ;
