--- a/data/pathfinder-bestiary-2/kapPWNOxXOLcd4VF.htm
+++ b/data/pathfinder-bestiary-2/kapPWNOxXOLcd4VF.htm
@@ -1,8 +1,8 @@
 Name: Amoeba Swarm
-Nom: 
-État: auto-trad
+Nom: Nuée d'Amibes
+État: libre
 
 ------ Description (en) ------
 An amoeba swarm consists of thousands of individual single-celled organisms held together by acrid-smelling slime. As ravenous as they are mindless, amoeba swarms use no tactics.<br /><br />
 ------ Description (fr) ------
-Un essaim d'amibes est constitué de milliers d'organismes unicellulaires individuels maintenus ensemble par une bave à l'odeur âcre. Aussi voraces qu'insensibles, les essaims d'amibes n'utilisent aucune tactique ;
+Une Nuée d'Amibes est constitué de milliers d'organismes unicellulaires individuels maintenus ensemble par une bave à l'odeur âcre. Aussi voraces qu'insensibles, les Nuée d'Amibes n'utilisent aucune tactique.
