--- a/data/pathfinder-bestiary-2/le7VaOJyQQnl37Wa.htm
+++ b/data/pathfinder-bestiary-2/le7VaOJyQQnl37Wa.htm
@@ -1,6 +1,6 @@
 Name: Giant Tick
 Nom: Tique géante
-État: auto-trad
+État: libre
 
 ------ Description (en) ------
 This grotesque tick is the size of a dog and scurries with surprising speed.<br /><br />
