--- a/data/pathfinder-bestiary-2/n1jTYFRCaqF1nQrf.htm
+++ b/data/pathfinder-bestiary-2/n1jTYFRCaqF1nQrf.htm
@@ -1,6 +1,6 @@
 Name: Titan Centipede
-Nom: 
-État: auto-trad
+Nom: Centipède Titanesque
+État: libre
 
 ------ Description (en) ------
 These colossal, solitary centipedes claim vast hunting grounds.<br /><br />
