--- a/data/feats/archetype-12-pu1U9ZWVVG1Lc94t.htm
+++ b/data/feats/archetype-12-pu1U9ZWVVG1Lc94t.htm
@@ -2,11 +2,10 @@ Name: Diverse Weapon Expert
 Nom: Armes diverses expert
 PrereqEN: Fighter Dedication|expert in any kind of weapon or unarmed attacks
 Avantage:
-PrereqFR: Dévouement du guerrier|expert dans tout type d’arme ou attaque à mains nues
-État: changé
-État d'origine: officielle
+PrereqFR: Dévouement du guerrier|expert avec une arme quelconque ou en attaque à mains nues
+État: libre
 
 ------ Description (en) ------
 <p>Your proficiency ranks for simple weapons and martial weapons increase to expert, and your proficiency rank for advanced weapons increases to trained.</p>
 ------ Description (fr) ------
-<p>Vos rangs de maîtrise pour les armes simples et les armes de guerre passent à expert, et votre rang de maîtrise pour les armes évoluées à qualifié.</p>
+<p>Vos rangs de maîtrise pour les armes simples et les armes de guerre passent à expert et votre rang de maîtrise pour les armes évoluées passe à qualifié.</p>
