--- a/data/pathfinder-bestiary/024PqcF8yMRBrPuq.htm
+++ b/data/pathfinder-bestiary/024PqcF8yMRBrPuq.htm
@@ -1,6 +1,6 @@
 Name: Adult White Dragon
 Nom: Dragon Blanc adulte
-État: changé
+État: officielle
 État d'origine: officielle
 
 ------ Description (en) ------
