--- a/data/pathfinder-bestiary/0hnnwyqLfYVIenzd.htm
+++ b/data/pathfinder-bestiary/0hnnwyqLfYVIenzd.htm
@@ -1,9 +1,9 @@
 Name: Deep Gnome Rockwarden
-Nom: Gardien des roches gnome des profondeurs
-État: changé
+Nom: Gardien des roches Gnome des profondeurs
+État: officielle
 État d'origine: officielle
 
 ------ Description (en) ------
 Deep gnome rockwardens follow druidic teachings and commune with the natural elemental influences and denizens of the Darklands. They know that not everything that lives below ground is sinister and evil, but they also understand that all primal spirits and entities must be respected.<br /><br />
 ------ Description (fr) ------
-Les gardiens des roches suivent un enseignement druidique et communient avec les influences naturelles et les habitants d’Ombreterre. Ils savent que tout ce qui vit sous terre n’est pas nécessairement sinistre et maléfique mais ils comprennent aussi que toutes les entités et tous les esprits primordiaux doivent être respectés.
+Les Gardiens des roches suivent un enseignement druidique et communient avec les influences naturelles et les habitants d’Ombreterre. Ils savent que tout ce qui vit sous terre n’est pas nécessairement sinistre et maléfique, mais ils comprennent aussi que toutes les entités et tous les esprits primordiaux doivent être respectés.
