--- a/data/pathfinder-bestiary/0plBflWwrCWQO2RO.htm
+++ b/data/pathfinder-bestiary/0plBflWwrCWQO2RO.htm
@@ -1,9 +1,9 @@
 Name: Zombie Shambler
 Nom: Titubeur zombie
-État: changé
+État: officielle
 État d'origine: officielle
 
 ------ Description (en) ------
 A zombie shambler is a slow-moving horror dangerous in larger groups.<br /><br />
 ------ Description (fr) ------
-Un titubeur zombie est une créature immonde et lente qui se révèle dangereuse en groupe.<br><br>
+Un Titubeur zombie est une créature immonde et lente qui se révèle dangereuse en groupe.<br><br>
